// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardNotice component should render a button when actions prop is provided 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-0:first-of-type {
  border-top: none;
}

.emotion-0:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-0:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

<div>
  <div
    class="components-flex components-card__footer components-card-footer card-notice emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="CardFooter"
  >
    <div
      class="card-notice__section"
    >
      <div
        class="card-notice__text"
      >
        Notice text
      </div>
      <div
        class="card-notice__button"
      >
        <button
          class="components-button"
          type="button"
        >
          Notice text
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardNotice component should render child 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-0>* {
  min-width: 0;
}

.emotion-0:first-of-type {
  border-top: none;
}

.emotion-0:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-0:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

<div>
  <div
    class="components-flex components-card__footer components-card-footer card-notice emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="CardFooter"
  >
    <div
      class="card-notice__section"
    >
      <div
        class="card-notice__text"
      >
        Notice text
      </div>
      <div
        class="card-notice__button"
      />
    </div>
  </div>
</div>
`;
